--- a/style.css
+++ b/style.css
@@ -7,6 +7,16 @@ body{
   height: 100%;
   font-family: 'Ubuntu', sans-serif;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 #map{
   height:105%;
   width: 100%;  
@@ -18,6 +28,7 @@ nav{
   color: white;
   z-index: 10;
   overflow: hidden;
+  height: 10%;
 }
 .navClass{
   display: flex;
@@ -29,6 +40,13 @@ nav{
 }
 .navItem{
   margin-left: 10%;
+  background: #FFA600;
+  border-radius: 30%;
+  padding: 1.5%
+}
+
+.navClass::hover{
+  background: white;
 }
 .logo{
   width: 10%;
@@ -37,15 +55,16 @@ nav{
   color: linear-gradient(#FFA600, yellow);
 }
 .intro{
-  width: 35%;
+  width: 30%;
   margin-left: 10%;
   margin-top: 5%;
-  min-height: 400px;
+  min-height: 80%;
   float: left;
   background:whitesmoke;
   position: relative;
   border-radius: 27%;
   justify-content: center;
+  
 }
 .introText{
   text-align: center;
@@ -70,4 +89,27 @@ nav{
   max-width:15%;
   height:auto;
   margin-top: 12%;
+}
+@keyframes growBox{
+  0% {
+    width: 35%;
+    margin-left: 10%;
+    margin-top: 5%;
+    border-radius: 27%;
+  }
+
+  50% {
+    width: 90%;
+    height:90%;
+    margin:0%;
+    border-radius: 5%;
+  }
+
+  100% {
+    width: 100%;
+    height:90%; 
+    position: absolute;
+    margin:0%;
+    border-radius: 0%;
+  }
 }
