--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
   padding:0px;
 }
 body{
-  width: 100%;
-  height: 100%;
   font-family: 'Ubuntu', sans-serif;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -18,12 +16,113 @@ body::-webkit-scrollbar {
   scrollbar-width: none;  /* Firefox */
 }
 #map{
-  height:105%;
+  height:100%;
   width: 100%;  
   position: absolute;
   top: 0px;
   z-index: -10;
 }
+
+.sidebar{
+  height: 100%;
+  width: 50px;
+  background: #11101d;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 6px 14px;
+  transition:all 0.5s ease;
+}
+
+.sidebar.active{
+  width: 200px;
+
+}
+
+.sidebar .logoContent .sidebarLogo{
+  color: white;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.sidebar.active .logoContent .sidebarLogo{
+  opacity: 1;
+  pointer-events: none;
+}
+
+.sidebar .logoContent i{
+  font-size: 35px;
+}
+.logoText{
+  font-size: 28px;
+}
+
+#sidebarButton{
+  color: white;
+  position: absolute;
+  top: 6px;
+  left: 50%;
+  font-size: 20px;
+  height:50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  transform: translateX(-50%);
+}
+
+.sidebar.active #sidebarButton{
+  left: 90%;
+}
+
+.sidebar.active .itemName{
+  opacity: 1;
+  pointer-events: auto;
+}
+.sidebar .itemName{
+  opacity: 0;
+  pointer-events: none;
+}
+
+.sidebar ul{
+  margin-top: 10%;
+}
+.sidebar ul li{
+  height:50px;
+  position: relative;
+  width: 100%;
+  list-style: none;
+  margin: 0 5px;
+  line-height: 50px;
+  text-align: center;
+}
+
+
+.sidebar ul li a{
+  color: white;
+  display: flex;
+  align-items:center;
+  text-decoration: none;
+  transition: all 0.4s ease;
+  border-radius: 12px;
+}
+
+.sidebar ul li a:hover{
+  background:white;
+  color: #11101d
+}
+
+.sidebar ul li a i{
+  height: 50px;
+  min-width: 50px;
+  border-radius: 12px;
+  line-height: 50px;
+}
+
+/* Old nav code
 nav{
   color: white;
   z-index: 10;
@@ -54,11 +153,14 @@ nav{
   margin:3%;
   color: linear-gradient(#FFA600, yellow);
 }
+*/
+
+
 .intro{
   width: 30%;
-  margin-left: 10%;
+  margin-left: 40%; /*make 10% */
   margin-top: 5%;
-  min-height: 80%;
+  min-height: 30vh;
   float: left;
   background:whitesmoke;
   position: relative;
