--- a/about.css
+++ b/about.css
@@ -7,6 +7,7 @@ h5 {
     text-transform: uppercase;
     font-style: normal;
     letter-spacing: 1px;
+    padding: 20px;
 }
 
 h2 {
@@ -16,6 +17,7 @@ h2 {
     font-size: 50px;
     font-weight: bold;
     line-height: 70px;
+    padding: 20px;
 }
 p {
     text-align: center;
@@ -25,4 +27,11 @@ p {
     font-weight: 300;
     line-height: 30px;
     letter-spacing: 1px;
+    padding-bottom: 60px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
