--- a/about.css
+++ b/about.css
@@ -21,8 +21,8 @@ h2 {
 }
 p {
     text-align: center;
-    color: rgba(18, 18, 18, 0.67);
-    font-family: "Poppins", Sans-serif;
+    color: #7a7a7a;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     font-weight: 300;
     line-height: 30px;
