--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar {
 .sidebar{
   height: 100%;
   width: 50px;
-  background: #11101d;
+  background: #616161;
   position: fixed;
   top: 0;
   left: 0;
@@ -65,7 +65,7 @@ body::-webkit-scrollbar {
   color: white;
   position: absolute;
   top: 6px;
-  left: 50%;
+  left: 55%;
   font-size: 20px;
   height:50px;
   width: 50px;
@@ -115,6 +115,17 @@ body::-webkit-scrollbar {
   color: #11101d
 }
 
+#sidebarButton{
+  color: #00C6CF;
+  transition: all 0.5s ease;
+  border-radius: 12px;
+}
+
+#sidebarButton:hover{
+  background:white;
+  color: #11101d
+}
+
 .sidebar ul li a i{
   height: 50px;
   min-width: 50px;
@@ -158,11 +169,11 @@ nav{
 
 .intro{
   width: 30%;
-  margin-left: 40%; /*make 10% */
-  margin-top: 5%;
+  margin-left: 10%; /*make 10% */
+  margin-top: 10%;
   min-height: 30vh;
   float: left;
-  background:whitesmoke;
+  background:#D3FBD8;
   position: relative;
   border-radius: 27%;
   justify-content: center;
@@ -173,7 +184,7 @@ nav{
   margin-top: 10%;
 }
 #searchBar{
-  background: #FFA600;
+  background: white;
   border:none;
   align-self: center;
   margin-left: 15%;
@@ -192,6 +203,13 @@ nav{
   height:auto;
   margin-top: 12%;
 }
+
+#backArrow{
+  display: none;
+  position: absolute;
+  bottom: 10%;
+  left: 10%;
+}
 @keyframes growBox{
   0% {
     width: 35%;
@@ -209,11 +227,38 @@ nav{
 
   100% {
     width: 100%;
-    height:90%; 
+    height:100%; 
     position: absolute;
     margin:0%;
     border-radius: 0%;
+    background-color: white;
   }
+}
+
+@keyframes shrinkBox{
+  0% {
+    width: 100%;
+    height:100%; 
+    position: absolute;
+    margin:0%;
+    border-radius: 0%;
+    background-color: white;
+  }
+  
+  50% {
+    width: 90%;
+    height:90%;
+    margin:0%;
+    border-radius: 5%;
+  }
+
+  100% {
+    width: 35%;
+    margin-left: 10%;
+    margin-top: 5%;
+    border-radius: 27%;
+  }
+
 }
 
 #hi{
