--- a/about.css
+++ b/about.css
@@ -1,47 +1,23 @@
-*{
-    margin:0px;
-    padding:0px;
-  }
-  body{
-    font-family: 'Ubuntu', sans-serif;
-  }
 
-h5 {
-    text-align: center;  
-    color: #419428;
-    font-family: "Poppins", Sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-style: normal;
-    letter-spacing: 1px;
-    padding: 20px;
+
+.social-link {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+  border-radius: 50%;
+  transition: all 0.3s;
+  font-size: 0.9rem;
 }
 
-h2 {
-    color: #121212;
-    text-align: center;
-    font-family: "Playfair Display";
-    font-size: 50px;
-    font-weight: bold;
-    line-height: 70px;
-    padding: 20px;
-}
-p {
-    text-align: center;
-    color: #7a7a7a;
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 30px;
-    letter-spacing: 1px;
-    padding-bottom: 60px;
-}
-
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.social-link:hover,
+.social-link:focus {
+  background: #ddd;
+  text-decoration: none;
+  color: #555;
 }
 
 .sidebar{
