--- a/style.css
+++ b/style.css
@@ -269,13 +269,100 @@ nav{
 }
 
 #hi{
-  font-size: 100%
+  font-size: 100%;
+  margin-top:10%;
+  margin-left: 3%;
+  margin-right: 3%;
+  width: 40%;
+  float: left;
+}
+
+#nearby{
+  font-size: 100%;
+  margin-top:8%;
+  margin-right: 3%;
+  width: 40%;
+  float: right;
+  /*display: none;*/
+  display: none;
+}
+
+#nearbyTitle{
+  margin-bottom: 10%;
+  font-size: larger;
+}
+
+#nearby li {
+  list-style-type:circle;
+  margin-bottom: 5%;
+  margin-left: 10%;
 }
 
 #landmarkImage{
-  margin-left: 70%;
-  margin-top: 10%;
+  margin-left: 53%;
+  margin-top: 8%;
   position: fixed;
-  width: 20px;
+  width: 45%;
   height: auto;
 }
+
+#landmarkImage img{
+  max-width: 100%;
+}
+
+#landmarkTitle{
+  margin-left: 15%;
+  margin-top: 5%;
+}
+
+.buttons{
+  position: fixed;
+  margin-top: 43%;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  /*display: none;*/display: none;
+}
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+  margin-left: 10%;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.button2 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #008CBA;
+  margin-left: 20%;
+}
+
+.button2:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
+.button3 {
+  background-color: white; 
+  margin-left: 33%;
+  color: black; 
+  border: 2px solid #f44336;
+}
+
+.button3:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+
